Actions
Bug #10495
closedlibc should know how many FPU exceptions there are
Start date:
2019-03-03
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
The code to to support sigfpe handlers takes the number of floating point exceptions from a header from libm (previously in devpro).
It's been wrong since I think at least 1994.
That's a pretty good indication nobody really uses it, but fixing it to make smatch and the compiler happy seems sensible
Updated by Rich Lowe over 3 years ago
- Subject changed from libc should know how man FPU exceptions there are to libc should know how many FPU exceptions there are
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 618d207ffd5dca94c4a4715afd5a15b0025530ea
commit 618d207ffd5dca94c4a4715afd5a15b0025530ea Author: Richard Lowe <richlowe@richlowe.net> Date: 2019-03-15T23:45:07.000Z 10495 libc should know how many FPU exceptions there are Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions