10495 libc should know how many FPU exceptions there are Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Gordon Ross <gwr@nexenta.com>